--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <header>
             <img src="images/logo.png" alt="capelo e diploma">
-            <h1>Calculadora de médias</h1>
+            <h1>Calculadora de médias da UFRA</h1>
         </header>
         <form id="form-atividade">
             <label>
